print: fix overflows after removing !important stuff

--- a/assets/css/format-print.css
+++ b/assets/css/format-print.css
@@ -38,7 +38,8 @@ pre:not(.mermaid) {
 }
 #R-body .topbar-button {
     /* we don't need the buttons while printing */
-    display: none;
+    /* we need !important to turn off JS topbar button handling setting element styles */
+    display: none !important;
 }
 @media screen and (max-width: 47.999rem) {
     #R-body .topbar-breadcrumbs {
@@ -78,6 +79,7 @@ hr{
     border-bottom: 1px solid rgba( 221, 221, 221, 1 );
 }
 #R-body #R-body-inner {
+    overflow: visible; /* turn off limitations for perfect scrollbar */
     /* reset paddings for chapters in screen */
     padding: 0 3.25rem 4rem 3.25rem;
 }
